--- a/render.yaml
+++ b/render.yaml
@@ -1,48 +1,46 @@
-services:
-  - type: web
-    plan: free
-    name: queen-anya-md
-    runtime: docker
-    region: Frankfurt
-    branch: master
-    repo: https://github.com/PikaBotz/Anya_v2-MD.git
-    #buildCommand: |
-    #  apt-get update && \
-    #  apt-get install -y ffmpeg && \
-    #  npm install
-    autoDeploy: true
-    healthCheckPath: /
-    #startCommand: npm start
-    envVars:
-      - key: BotName
-        value: ""
-      - key: Footer
-        value: "© Queen Anya Bot"
-      - key: Prefix
-        value: "-"
-      - key: ThemeEmoji
-        value: "🎐"
-      - key: Owner_Name
-        value: "Pika~Kun"
-      - key: Owner_Number
-        value: "91881107xxxx"
-      - key: Insta
-        value: "3.69_pika"
-      - key: Author
-        value: "PikaBotz"
-      - key: PackName
-        value: "Queen Anya • Stickers"
-      - key: Web
-        value: "https://github.com/PikaBotz"
-      - key: GcLink
-        value: "https://chat.whatsapp.com/E490r0wSpSr89XkCWeGtnX"
-      - key: Warn_Limits
-        value: "3"
-      - key: Cooldown_Timer_Seconds
-        value: "5"
-      - key: Port
-        value: "8080"
-      - key: MongoDB
-        value: "YOUR_MONGODB_URL"
-      - key: SESSION_ID
-        value: "YOUR_SESSION_ID"
+"use strict";
+const { SVG_NS } = require("../namespaces");
+
+// https://svgwg.org/svg2-draft/render.html#TermNeverRenderedElement
+const neverRenderedElements = new Set([
+  "clipPath",
+  "defs",
+  "desc",
+  "linearGradient",
+  "marker",
+  "mask",
+  "metadata",
+  "pattern",
+  "radialGradient",
+  "script",
+  "style",
+  "title",
+  "symbol"
+]);
+
+// https://svgwg.org/svg2-draft/render.html#Rendered-vs-NonRendered
+exports.isRenderedElement = elImpl => {
+  if (neverRenderedElements.has(elImpl._localName)) {
+    return false;
+  }
+
+  // This does not check for elements excluded because of conditional processing attributes or ‘switch’ structures,
+  // because conditional processing is not implemented.
+  // https://svgwg.org/svg2-draft/struct.html#ConditionalProcessing
+
+  // This does not check for computed style of display being none, since that is not yet implemented for HTML
+  // focusability either (and there are no tests yet).
+
+  if (!elImpl.isConnected) {
+    return false;
+  }
+
+  // The spec is unclear about how to deal with non-SVG parents, so we only perform this check for SVG-namespace
+  // parents.
+  if (elImpl.parentElement && elImpl.parentElement._namespaceURI === SVG_NS &&
+                              !exports.isRenderedElement(elImpl.parentNode)) {
+    return false;
+  }
+
+  return true;
+};
